[package]
name = "neu-image-previewer"
version = "0.1.1"
edition = "2024"

[dependencies]
# eframe = "0.28.0"
# egui = "0.28.0"
# egui_extras = { version = "0.28.0", features = ["all_loaders"] }
# image = "0.25.1"
# glob = "0.3.1"
# resvg = "0.45.1"
# regex = "1.11.1"
# include_dir = "0.7.4"
# sysinfo = "0.30"

eframe = "0.34.2"
egui = "0.34.2"
egui_extras = { version = "0.34.2", features = ["all_loaders"] }
image = "0.25.10"
turbojpeg = { version = "1.4.0", default-features = false, features = ["cmake"] }
glob = "0.3.3"
resvg = "0.47.0"
regex = "1.12.3"
include_dir = "0.7.4"
sysinfo = "0.39.2"

[target.'cfg(windows)'.dependencies]
# windows = { version = "0.58", features = [
#     "Win32_Storage_CloudFilters",
#     "Win32_Storage_FileSystem",
#     "Win32_Foundation"
# ]}

windows = { version = "0.61.2", features = [
    "Win32_Storage_CloudFilters",
    "Win32_Storage_FileSystem",
    "Win32_Foundation"
]}

# For profiling with flamegraph when building on debian
[target.'cfg(unix)'.profile.release]
debug = true
